CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(cv_class2)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")

FIND_PACKAGE(OpenCV 4 REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_LIBRARIES})

ADD_EXECUTABLE(cam cam.cpp)
TARGET_LINK_LIBRARIES(cam ${OpenCV_LIBRARIES})
