CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(cv_class2)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")

FIND_PACKAGE(OpenCV 4 REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_LIBRARIES})

ADD_EXECUTABLE(ch1 ch1.cpp)
TARGET_LINK_LIBRARIES(ch1 ${OpenCV_LIBRARIES})

ADD_EXECUTABLE(ch2 ch2.cpp)
TARGET_LINK_LIBRARIES(ch2 ${OpenCV_LIBRARIES})

ADD_EXECUTABLE(ch3 ch3.cpp)
TARGET_LINK_LIBRARIES(ch3 ${OpenCV_LIBRARIES})

ADD_EXECUTABLE(ch4 ch4.cpp)
TARGET_LINK_LIBRARIES(ch4 ${OpenCV_LIBRARIES})

ADD_EXECUTABLE(ch5 ch5.cpp)
TARGET_LINK_LIBRARIES(ch5 ${OpenCV_LIBRARIES})

ADD_EXECUTABLE(use1 use1.cpp)
TARGET_LINK_LIBRARIES(use1 ${OpenCV_LIBRARIES})

ADD_EXECUTABLE(use2 use2.cpp)
TARGET_LINK_LIBRARIES(use2 ${OpenCV_LIBRARIES})